# RVSCC

./: .ash_history  .devcontainer.json  .drone.yml  .gitignore  .viminfo  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  info.yaml
.gitea/workflows/: verilate.yaml
cmake/: sv2v.cmake  utils.cmake
docs/figures/: alu.tex  main.tex
fw/: CMakeLists.txt  linker-script.ld
fw/cmake/: riscv-toolchain.cmake  rv32toolchain.cmake  toolchain.cmake  utils.cmake
fw/sandbox/: CMakeLists.txt
fw/sandbox/asm/: CMakeLists.txt  main.s
fw/sandbox/c/: CMakeLists.txt
fw/sandbox/src/: main.c
fw/src/: main.c
fw/test/: CMakeLists.txt  core.s  imm.s  itype.s  rtype.s
fw/test/rtype/: main.s
program/: CMakeLists.txt
program/cmake/: riscv.cmake
program/src/: main.c
rtl/: ALU.sv  ALUDecoder.sv  CPU.sv  CacheController.sv  CacheMemory.sv  ControlUnit.sv  DataMemory.sv  Extend.sv  HazardUnit.sv  ImmExtend.sv  InstructionMemory.sv  JumpControl.sv  MainDecoder.sv  PipelinedControlUnit.sv  PriorityEncoder.sv  RV32IDefs.sv  RegisterFile.sv  RotateCRU.sv  SingleCycleCPU.sv  alu.sv  alu_decoder.sv  cache_controller.sv  cache_memory.sv  control_unit.sv  data_memory.sv  data_memory_if.sv  five_stage_pipeline_datapath.sv  hazard_unit.sv  imm_extend.sv  instr_memory.sv  instr_memory_if.sv  jump_control.sv  main_decoder.sv  pipelined_control_unit.sv  pipelined_cpu.sv  priority_encoder.sv  register_file.sv  rotate_cru.sv  rv32i_defs.sv  single_cycle_datapath.sv  (+2 more)
scripts/: vivado.tcl
src/: .output.v.swp  ALUDecoder.sv  CMakeLists.txt  CPU.sv  ControlUnit.sv  DataMemory.sv  Extend.sv  InstructionMemory.sv  RegisterFile.sv  alu.sv  data_memory.sv  instr_memory.sv  instr_memory_if.sv  out.v  output.v  single_cycle_datapath.sv  timescale.sv  tt4_core.sv
src/test/: CMakeLists.txt  test_cache_memory.sv  test_data_memory.sv  test_single_cycle_core.sv
test/: CMakeLists.txt  Test_ALU.sv  Test_CPU.sv  Test_CacheMemory.sv  Test_DataMemory.sv  Test_ImmExtend.sv  Test_InstrMemory.sv  Test_PriorityEncoder.sv  Test_RegisterFile.sv  sim_individual_test.cpp  sim_main.cpp  test_alu.sv  test_cache_memory.sv  test_data_memory.sv  test_five_stage_pipeline_core.sv  test_imm_extend.sv  test_instr_memory.sv  test_priority_encoder.sv  test_register_file.sv  test_single_cycle_core.sv  test_two_way_lru_cache.sv
